@@ -13,7 +13,6 @@ Priority Issues (Fix These First)
 
 - templates
   - templates that are not for HTTP
-- While In error message - in should not be capitalized.
 - errors should support err_previous
 - eof handling in expect symbol (i.e. reached end-of-file)
 - bug: in parser-decl-as, an include file that starts with a blank line will
@@ -65,7 +64,8 @@ Priority Issues (Fix These First)
 - check for TODO's
 - terminal emulation issues - why "less' doesn't always work correctly from a SparForte session, compare with Bash.  It's as if the TERM is wrong, but when I test I see TERM.
 - Beader: that variables with same spelling but different cases should be an error
-
+- provision script ought to support the "without" configure options
+- provision script should search for the EPEL RPM version, not be hard-coded
 
 - ada95 corrective recommendations
 - separate subprograms need parameter verification like other forward
